Fix spacing around button box

--- a/aidants_connect_habilitation/static/scss/main-habilitation.scss
+++ b/aidants_connect_habilitation/static/scss/main-habilitation.scss
@@ -297,6 +297,10 @@ fieldset {
   > :only-child {
     margin-left: auto;
   }
+
+  &.standalone {
+    margin-top: 4rem;
+  }
 }
 
 .shadowed .button-box {
